remove pom changes not yet merged to main